fix: fix backend warnings and test failures